[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Results.gd" type="Script" id=1]
[ext_resource path="res://images/oldpaperNEW.png" type="Texture" id=2]
[ext_resource path="res://fonts/candles_.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )
font_data = ExtResource( 3 )

[node name="Results" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 960.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Results"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 960.0
margin_bottom = 192.0
grow_horizontal = 2
alignment = 1

[node name="VBoxContainer_Position" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 423.0
margin_right = 450.0
margin_bottom = 86.0

[node name="ResultLabel_0" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Position"]
margin_right = 27.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "Pos."

[node name="ResultLabel_1" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Position"]
margin_top = 18.0
margin_right = 27.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "1."

[node name="ResultLabel_2" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Position"]
margin_top = 36.0
margin_right = 27.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "2."

[node name="ResultLabel_3" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Position"]
margin_top = 54.0
margin_right = 27.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "3."

[node name="ResultLabel_4" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Position"]
margin_top = 72.0
margin_right = 27.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "4."

[node name="VBoxContainer_Name" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 454.0
margin_right = 492.0
margin_bottom = 86.0

[node name="Name_0" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Name"]
margin_right = 38.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "Name"

[node name="Name_1" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Name"]
margin_top = 18.0
margin_right = 38.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "1."

[node name="Name_2" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Name"]
margin_top = 36.0
margin_right = 38.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "1."

[node name="Name_3" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Name"]
margin_top = 54.0
margin_right = 38.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "1."

[node name="Name_4" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Name"]
margin_top = 72.0
margin_right = 38.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "1."

[node name="VBoxContainer_Points" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 496.0
margin_right = 536.0
margin_bottom = 86.0

[node name="Points_0" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Points"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "Points"
align = 2

[node name="Points_1" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Points"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "1."
align = 2

[node name="Points_2" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Points"]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "1."
align = 2

[node name="Points_3" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Points"]
margin_top = 54.0
margin_right = 40.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "1."
align = 2

[node name="Points_4" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer_Points"]
margin_top = 72.0
margin_right = 40.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.0627451, 0, 0, 1 )
text = "1."
align = 2

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 960.0
margin_bottom = 216.0
text = "CONTINUE"
[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
